# ai-listening

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
tools/: aho.py  ai.py  dataloader.py  test_ai.py
utils/: ai.py  chatprocessor.py  loader.py  merger.py  preprocessor.py  validator.py
