[project]
name = "listening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "dotenv>=0.9.9",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandas-stubs>=2.3.2.250926",
    "pandera>=0.27.0",
    "pydantic>=2.11.7",
    "tqdm-stubs>=0.2.1",
]
